--- a/portainer/docker-compose.yaml
+++ b/portainer/docker-compose.yaml
@@ -2,14 +2,17 @@ version: '3.8'
 
 services:
   portainer:
+    container_name: portainer
+    hostname: portainer
     image: portainer/portainer
     privileged: true
     volumes:
-      - './data:/data'
+      - './portainer_data:/data'
       - '/var/run/docker.sock:/var/run/docker.sock'
     restart: unless-stopped
-    networks:
-      - nginx
+    ports:
+      - '8000:8000'
+      - '9443:9443'
 
 networks:
   default:
